1_k8s-config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app

---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
